--- a/public/views/puzzle-templates-list.html
+++ b/public/views/puzzle-templates-list.html
@@ -1,1 +1,65 @@
-Puzzle Templates List
+<div class="container" data-ng-controller="puzzleTemplatesCtrl as ptctrl">
+    <div class="card">
+        <div class="card-header">
+            <h2>Filter Your Templates</h2>
+        </div>
+        <div class="card-body card-padding">
+            <div class="row">
+                <div class="row" style="margin:5px;">
+                    <p class="f-500 c-black m-b-5">Width</p>
+                    <small class="c-gray">{{ ptctrl.widthMin }} - {{ ptctrl.widthMax }}</small>
+                    <br/>
+                    <br/>
+                    <div style="padding:0px 12px 12px 12px;">
+                        <div slider class="input-slider-range" ng-from="ptctrl.widthMin" ng-to="ptctrl.widthMax" start=5 end=20></div>
+                    </div>
+                </div>
+                <div class="row" style="margin:5px;">
+                    <p class="f-500 c-black m-b-5">Height</p>
+                    <small class="c-gray">{{ ptctrl.heightMin }} - {{ ptctrl.heightMax }}</small>
+                    <br/>
+                    <br/>
+                    <div style="padding:0px 12px 12px 12px;">
+                        <div slider class="input-slider-range" ng-from="ptctrl.heightMin" ng-to="ptctrl.heightMax" start=5 end=20></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-header">
+            <h2>Available Templates</h2>
+        </div>
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table table-striped table-vmiddle table-condensed ng-table" show-filter="true">
+                    <thead>
+                        <tr>
+                            <th class="header sortable" ng-click="ptctrl.changeSort('name')" ng-class="{'sort-asc': ptctrl.currentSort == 'name', 'sort-desc': ptctrl.currentSort == '-name'}"><div class="ng-table-header">Name</div></th>
+                            <th class="header sortable" ng-click="ptctrl.changeSort('width')" ng-class="{'sort-asc': ptctrl.currentSort == 'width', 'sort-desc': ptctrl.currentSort == '-width'}"><div class="ng-table-header">Width</div></th>
+                            <th class="header sortable" ng-click="ptctrl.changeSort('width')" ng-class="{'sort-asc': ptctrl.currentSort == 'height', 'sort-desc': ptctrl.currentSort == '-height'}"><div class="ng-table-header">Height</div></th>
+                            <th class="header sortable" ng-click="ptctrl.changeSort('width')" ng-class="{'sort-asc': ptctrl.currentSort == 'owner', 'sort-desc': ptctrl.currentSort == '-owner'}"><div class="ng-table-header">Owner</div></th>
+                            <th class="header sortable" ng-click="ptctrl.changeSort('created')" ng-class="{'sort-asc': ptctrl.currentSort == 'created', 'sort-desc': ptctrl.currentSort == '-created'}"><div class="ng-table-header">Created</div></th>
+                        </tr>
+                    </thead>
+                    
+                    <tr ng-repeat="pt in ptctrl.puzzletemplates | orderBy:ptctrl.currentSort | filter:ptctrl.filterResults | startFrom:(ptctrl.currentPage-1)*ptctrl.pageSize | limitTo:ptctrl.pageSize">
+                        <td><a href="#/puzzle-templates/{{pt.slug}}">{{pt.name}}</a></td>
+                        <td>{{pt.width}}</td>
+                        <td>{{pt.height}}</td>
+                        <td><a href="/users/{{pt.username}}">{{pt.owner}}</a></td>
+                        <td>{{pt.created}}</td>
+                    </tr>
+                    <tr ng-hide="(ptctrl.puzzletemplates | filter:ptctrl.filterResults).length > 0"><td colspan="5">No results. Check your filters - You may be filtering all of them out.</td></tr>
+                </table>
+                <div class="ng-table-pager">
+                    <ul class="pagination ng-table-pagination">
+                        <li ng-class="{'active' : $index === (ptctrl.currentPage-1)*ptctrl.pageSize}" ng-repeat="pt in ptctrl.puzzletemplates | filter:ptctrl.filterResults" ng-if="$index % ptctrl.pageSize === 0">
+                            <a ng-click="ptctrl.changePage(($index / ptctrl.pageSize) + 1)" href="">{{($index / ptctrl.pageSize) + 1 | number:0}}</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
