--- a/public/views/puzzle-template-detail.html
+++ b/public/views/puzzle-template-detail.html
@@ -12,7 +12,7 @@
                 </table>
             </div>
             <div class="row" style="margin-top: 20px;">
-                <div class="btn btn-primary bottom-right-button" ng-click="ptctrl.createTemplate()">Create a Puzzle With This Template</div>
+                <a class="btn btn-primary bottom-right-button" href="#/puzzles/new/{{ptctrl.puzzleTemplate.slug}}">Create a Puzzle With This Template</a>
             </div>
         </div>
     </div>
