--- a/public/css/cw.css
+++ b/public/css/cw.css
@@ -1,6 +1,10 @@
 .pointy{
     cursor:pointer;
 }
+.puzzleContainer{
+    width:100%;
+    position:absolute;
+}
 .puzzle{
     text-align: center;
     padding:5px 5px 50px;
@@ -25,9 +29,9 @@
 .puzzle table td.clue::before{
     content: attr(data-clue-number);
     font-size: 9px;
-    float: left;
     position: absolute;
     left: 1px;
+    top: 0px;
 }
 .puzzle table td.selected-word{
     background-color:lightblue;
@@ -39,4 +43,11 @@
     position:absolute;
     bottom:10px;
     right:10px;
+}
+.suggestions{
+    float:left;
+    margin: 10px;
+}
+.suggestions td, th{
+    padding:1px;
 }
