--- a/public/views/puzzle-edit.html
+++ b/public/views/puzzle-edit.html
@@ -1,1 +1,52 @@
-Edit Puzzle
+<div class="container" data-ng-controller="puzzleCtrl as pctrl" ng-keydown="pctrl.keyDown($event)">
+    <div class="card">
+        <div class="card-header">
+            <h2>{{pctrl.puzzle.name}}</h2>
+            <div><small>template by {{pctrl.puzzle.puzzle_template.owner}}</small></div>
+            <div><small>puzzle by {{pctrl.puzzle.owner}}</small></div>
+        </div>
+        <div class="card-body" style="min-height:530px;">
+            <div ng-show="pctrl.suggestions.length > 0" class="suggestions">
+                <h3>Suggestions</h3>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Letter</th>
+                            <th>Strength</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="suggestion in pctrl.suggestions">
+                            <td>{{suggestion.letter}}</td>
+                            <td>{{100 * suggestion.score / pctrl.total_suggestion_score | number:3}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="puzzleContainer">
+                <div class="puzzle">
+                    <table>
+                        <tr ng-repeat="row in pctrl.range(1,pctrl.puzzle.puzzle_template.height)" >
+                            <td 
+                                ng-class="{'black'              : pctrl.isBlackSquare(row, col)
+                                         , 'pointy'             : !pctrl.isBlackSquare(row, col)
+                                         , 'clue'               : pctrl.clueNumber(row, col) > -1
+                                         , 'selected-letter'    : pctrl.selectedRow == row && pctrl.selectedCol == col
+                                         , 'selected-word'      : pctrl.inSelectedWord(row, col)}" 
+                                ng-repeat="col in pctrl.range(1, pctrl.puzzle.puzzle_template.width)" 
+                                data-row="{{row}}" 
+                                data-col="{{col}}"
+                                data-clue-number="{{pctrl.clueNumber(row, col) + 1}}"
+                                ng-click="pctrl.selectLetter(row, col)">
+                                    <div contenteditable="true" ng-model="pctrl.puzzle.puzzle_squares[row + '-' + col].letter"></div>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="row" style="margin-top: 20px;">
+                <div class="btn btn-primary bottom-right-button" ng-click="pctrl.create()">Create</div>
+            </div>
+        </div>
+    </div>
+</div>
