--- a/public/views/puzzle-template-detail.html
+++ b/public/views/puzzle-template-detail.html
@@ -7,12 +7,16 @@
             <div class="puzzle">
                 <table>
                     <tr ng-repeat="row in ptctrl.range(1,ptctrl.width)" >
-                        <td ng-class="{'black' : ptctrl.isBlackSquare(row, col), 'clue' : ptctrl.clueNumber(row, col) > -1}" ng-repeat="col in ptctrl.range(1, ptctrl.height)" data-row="{{row}}" data-col="{{col}}"><div data-clue-number="{{ptctrl.clueNumber(row, col) + 1}}"></div></td>
+                        <td 
+                        ng-class="{'black' : ptctrl.isBlackSquare(row, col), 'clue' : ptctrl.clueNumber(row, col) > -1}" 
+                        ng-repeat="col in ptctrl.range(1, ptctrl.height)" 
+                        data-row="{{row}}" data-col="{{col}}"
+                        data-clue-number="{{ptctrl.clueNumber(row, col) + 1}}"><div></div></td>
                     </tr>
                 </table>
             </div>
             <div class="row" style="margin-top: 20px;">
-                <a class="btn btn-primary bottom-right-button" href="#/puzzles/new/{{ptctrl.puzzleTemplate.slug}}">Create a Puzzle With This Template</a>
+                <div class="btn btn-primary bottom-right-button" ng-click="ptctrl.createPuzzle()" href="#/puzzles/new/{{ptctrl.puzzleTemplate.slug}}">Create a Puzzle With This Template</div>
             </div>
         </div>
     </div>
