--- a/public/template/sidebar-left.html
+++ b/public/template/sidebar-left.html
@@ -30,6 +30,7 @@
             <a href="" toggle-submenu><i class="zmdi zmdi-collection-text"></i> Puzzles</a>
 
             <ul>
+                <li><a data-ui-sref-active="active" data-ui-sref="puzzles.my-incomplete-list" data-ng-click="mactrl.sidebarStat($event)" ng-show="profile.logged_in">My incomplete puzzles</a></li>
                 <li><a data-ui-sref-active="active" data-ui-sref="puzzles.list" data-ng-click="mactrl.sidebarStat($event)">List</a></li>
                 <li><a data-ui-sref-active="active" data-ui-sref="puzzles.new" data-ng-click="mactrl.sidebarStat($event)">+ New Puzzle </a></li>
             </ul>
