Implement front-end of Puzzle::activate()

--- a/public/views/puzzle-edit.html
+++ b/public/views/puzzle-edit.html
@@ -70,7 +70,7 @@
                 </table>
             </div>
             <div class="row" style="margin-top: 20px;">
-                <div class="btn btn-primary bottom-right-button" ng-click="pctrl.create()">Create</div>
+                <div class="btn btn-primary bottom-right-button" ng-click="pctrl.create()" data-create-puzzle-warning data-puzzle-slug="{{pctrl.puzzle.slug}}">Create</div>
             </div>
         </div>
     </div>
