--- a/public/views/puzzle-edit.html
+++ b/public/views/puzzle-edit.html
@@ -30,7 +30,11 @@
                                          , 'pointy'             : !pctrl.isBlackSquare(row, col)
                                          , 'clue'               : pctrl.clueNumber(row, col) > -1
                                          , 'selected-letter'    : pctrl.selectedRow == row && pctrl.selectedCol == col
-                                         , 'selected-word'      : pctrl.inSelectedWord(row, col)}" 
+                                         , 'selected-word'      : pctrl.inSelectedWord(row, col)
+                                         , 'impossible'         : pctrl.inImpossible(row, col)
+                                         , 'problem1'            : pctrl.inProblem(row, col) > 40
+                                         , 'problem2'            : pctrl.inProblem(row, col) > 60
+                                         , 'problem3'            : pctrl.inProblem(row, col) > 80}" 
                                 ng-repeat="col in pctrl.range(1, pctrl.puzzle.puzzle_template.width)" 
                                 data-row="{{row}}" 
                                 data-col="{{col}}"
