--- a/public/views/puzzle-edit.html
+++ b/public/views/puzzle-edit.html
@@ -46,7 +46,7 @@
                     </table>
                 </div>
                 <div class="clue-input-container" ng-show="pctrl.selectedRow > 0 && pctrl.selectedCol > 0">
-                    <div>Clue for {{pctrl.selectedClue() | number}} {{pctrl.selectedDirection}}:</div>
+                    <div>Clue for {{pctrl.selectedClueOrdinal() | number}} {{pctrl.selectedDirection}}:</div>
                     <div style="margin-bottom:4px;"><input id="clue" ng-model="pctrl.selectedClueText"/></div>
                     <div class="btn btn-primary" ng-click="pctrl.saveClue()">Save Clue</div>
                 </div>
