--- a/public/views/puzzles-list.html
+++ b/public/views/puzzles-list.html
@@ -1,1 +1,65 @@
-Puzzles
+<div class="container" data-ng-controller="puzzlesCtrl as pctrl">
+    <div class="card">
+        <div class="card-header">
+            <h2>Filter Your Templates</h2>
+        </div>
+        <div class="card-body card-padding">
+            <div class="row">
+                <div class="row" style="margin:5px;">
+                    <p class="f-500 c-black m-b-5">Width</p>
+                    <small class="c-gray">{{ pctrl.widthMin }} - {{ pctrl.widthMax }}</small>
+                    <br/>
+                    <br/>
+                    <div style="padding:0px 12px 12px 12px;">
+                        <div slider class="input-slider-range" ng-from="pctrl.widthMin" ng-to="pctrl.widthMax" start=5 end=20></div>
+                    </div>
+                </div>
+                <div class="row" style="margin:5px;">
+                    <p class="f-500 c-black m-b-5">Height</p>
+                    <small class="c-gray">{{ pctrl.heightMin }} - {{ pctrl.heightMax }}</small>
+                    <br/>
+                    <br/>
+                    <div style="padding:0px 12px 12px 12px;">
+                        <div slider class="input-slider-range" ng-from="pctrl.heightMin" ng-to="pctrl.heightMax" start=5 end=20></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-header">
+            <h2>Puzzles</h2>
+        </div>
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table table-striped table-vmiddle table-condensed ng-table" show-filter="true">
+                    <thead>
+                        <tr>
+                            <th class="header sortable" ng-click="pctrl.changeSort('name')" ng-class="{'sort-asc': pctrl.currentSort == 'name', 'sort-desc': pctrl.currentSort == '-name'}"><div class="ng-table-header">Name</div></th>
+                            <th class="header sortable" ng-click="pctrl.changeSort('width')" ng-class="{'sort-asc': pctrl.currentSort == 'width', 'sort-desc': pctrl.currentSort == '-width'}"><div class="ng-table-header">Width</div></th>
+                            <th class="header sortable" ng-click="pctrl.changeSort('width')" ng-class="{'sort-asc': pctrl.currentSort == 'height', 'sort-desc': pctrl.currentSort == '-height'}"><div class="ng-table-header">Height</div></th>
+                            <th class="header sortable" ng-click="pctrl.changeSort('width')" ng-class="{'sort-asc': pctrl.currentSort == 'owner', 'sort-desc': pctrl.currentSort == '-owner'}"><div class="ng-table-header">Owner</div></th>
+                            <th class="header sortable" ng-click="pctrl.changeSort('created')" ng-class="{'sort-asc': pctrl.currentSort == 'created', 'sort-desc': pctrl.currentSort == '-created'}"><div class="ng-table-header">Created</div></th>
+                        </tr>
+                    </thead>
+                    
+                    <tr ng-repeat="p in pctrl.puzzles | orderBy:pctrl.currentSort | filter:pctrl.filterResults | startFrom:(pctrl.currentPage-1)*pctrl.pageSize | limitTo:pctrl.pageSize">
+                        <td><a href="#/puzzles/{{p.slug}}">{{p.name}}</a></td>
+                        <td>{{p.width}}</td>
+                        <td>{{p.height}}</td>
+                        <td><a href="/users/{{p.username}}">{{p.owner}}</a></td>
+                        <td>{{p.created}}</td>
+                    </tr>
+                    <tr ng-hide="(pctrl.puzzletemplates | filter:pctrl.filterResults).length > 0"><td colspan="5">No results. Check your filters - You may be filtering all of them out.</td></tr>
+                </table>
+                <div class="ng-table-pager">
+                    <ul class="pagination ng-table-pagination">
+                        <li ng-class="{'active' : $index === (pctrl.currentPage-1)*pctrl.pageSize}" ng-repeat="p in pctrl.puzzles | filter:pctrl.filterResults" ng-if="$index % pctrl.pageSize === 0">
+                            <a ng-click="pctrl.changePage(($index / pctrl.pageSize) + 1)" href="">{{($index / pctrl.pageSize) + 1 | number:0}}</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
