Work toward Puzzle Guesses

--- a/public/views/puzzle-edit.html
+++ b/public/views/puzzle-edit.html
@@ -1,4 +1,4 @@
-<div class="container" data-ng-controller="puzzleCtrl as pctrl" ng-keydown="pctrl.keyDown($event)">
+<div class="container" data-ng-controller="puzzleEditCtrl as pctrl" ng-keydown="pctrl.keyDown($event)">
     <div class="card">
         <div class="card-header">
             <h2>{{pctrl.puzzle.name}}</h2>
