--- a/public/views/puzzle-solve.html
+++ b/public/views/puzzle-solve.html
@@ -1,1 +1,51 @@
-Puzzle Detail
+<div class="container" data-ng-controller="puzzleSolveCtrl as pctrl" ng-keydown="pctrl.keyDown($event)">
+    <div class="card">
+        <div class="card-header">
+            <h2>{{pctrl.puzzle.name}}</h2>
+            <div><small>template by {{pctrl.puzzle.puzzle_template.owner}}</small></div>
+            <div><small>puzzle by {{pctrl.puzzle.owner}}</small></div>
+        </div>
+        <div class="card-body" style="min-height:530px;">
+            <div class="puzzle-edit-clues-container">
+                <h3>Clues</h3>
+                <div>
+                    <h4>Across</h4>
+                    <div class="pointy" 
+                        ng-class="{'active' : pctrl.inSelectedWord(clue.start.row, clue.start.col) && pctrl.selectedDirection == 'across'}"
+                        ng-repeat="(key, clue) in pctrl.possibleClues.across" 
+                        ng-click="pctrl.clueClick(clue, 'across');">{{key | number}}. {{clue.clue}}</div>
+                    <h4>Down</h4>
+                    <div class="pointy" 
+                        ng-class="{'active' : pctrl.inSelectedWord(clue.start.row, clue.start.col) && pctrl.selectedDirection == 'down'}"
+                        ng-repeat="(key, clue) in pctrl.possibleClues.down" 
+                        ng-click="pctrl.clueClick(clue, 'down');">{{key | number}}. {{clue.clue}}</div>
+                </div>
+            </div>
+            <div class="puzzleContainer">
+                <div class="puzzle">
+                    <table>
+                        <tr ng-repeat="row in pctrl.range(1,pctrl.puzzle.puzzle_template.height)" >
+                            <td 
+                                ng-class="{'black'              : pctrl.isBlackSquare(row, col)
+                                         , 'pointy'             : !pctrl.isBlackSquare(row, col)
+                                         , 'clue'               : pctrl.clueNumber(row, col) > -1
+                                         , 'selected-letter'    : pctrl.selectedRow == row && pctrl.selectedCol == col
+                                         , 'selected-word'      : pctrl.inSelectedWord(row, col)
+                                         , 'impossible'         : pctrl.inImpossible(row, col)
+                                         , 'problem1'            : pctrl.inProblem(row, col) > 40
+                                         , 'problem2'            : pctrl.inProblem(row, col) > 60
+                                         , 'problem3'            : pctrl.inProblem(row, col) > 80}" 
+                                ng-repeat="col in pctrl.range(1, pctrl.puzzle.puzzle_template.width)" 
+                                data-row="{{row}}" 
+                                data-col="{{col}}"
+                                data-clue-number="{{pctrl.clueNumber(row, col) + 1}}"
+                                ng-click="pctrl.selectLetter(row, col)">
+                                    <div contenteditable="true" ng-model="pctrl.puzzle.puzzle_squares[row + '-' + col].letter"></div>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
