Implement notifying the user when they've solved the puzzle

--- a/public/views/puzzle-solve.html
+++ b/public/views/puzzle-solve.html
@@ -45,6 +45,7 @@
                         </tr>
                     </table>
                 </div>
+                <div ng-show="pctrl.puzzle.solved == 1">SOLVED!</div>
             </div>
         </div>
     </div>
