--- a/public/css/cw.css
+++ b/public/css/cw.css
@@ -87,3 +87,8 @@
 .puzzle-edit-clues-container .active{
     background-color:lightgoldenrodyellow;
 }
+.top-right-x{
+    position:absolute;
+    top: 15px;
+    right: 15px;
+}
