--- a/public/template/sidebar-left.html
+++ b/public/template/sidebar-left.html
@@ -27,7 +27,7 @@
             <a data-ui-sref="home" data-ng-click="mactrl.sidebarStat($event)"><i class="zmdi zmdi-home"></i> Home</a>
         </li>
         <li class="sub-menu" data-ng-class="{ 'active toggled': mactrl.$state.includes('puzzles') }">
-            <a href="" toggle-submenu><i class="zmdi zmdi-collection-text"></i> Puzzles</a>
+            <a href="" toggle-submenu><i class="zmdi zmdi-puzzle-piece"></i> Puzzles</a>
 
             <ul>
                 <li><a data-ui-sref-active="active" data-ui-sref="puzzles.my-incomplete-list" data-ng-click="mactrl.sidebarStat($event)" ng-show="profile.logged_in">My incomplete puzzles</a></li>
