--- a/public/views/puzzle-edit.html
+++ b/public/views/puzzle-edit.html
@@ -6,6 +6,7 @@
             <div><small>puzzle by {{pctrl.puzzle.owner}}</small></div>
         </div>
         <div class="card-body" style="min-height:530px;">
+            <div class="btn btn-danger top-right-x">x</div>
             <div class="puzzle-edit-clues-container">
                 <h3>Clues</h3>
                 <div>
