--- a/public/views/puzzle-edit.html
+++ b/public/views/puzzle-edit.html
@@ -5,8 +5,8 @@
                 <div ng-click="pctrl.editName = true;" ng-hide="pctrl.editName">{{pctrl.puzzle.name}}</div>
                 <input id="puzzlename" ng-model="pctrl.puzzle.name" ng-show="pctrl.editName" ng-blur="pctrl.saveName()" style="width:500px; height: 25px;"/>
             </h2>
-            <div><small>template by {{pctrl.puzzle.puzzle_template.owner}}</small></div>
-            <div><small>puzzle by {{pctrl.puzzle.owner}}</small></div>
+            <div><small>template by <a href="#/users/{{pctrl.puzzle.puzzle_template.owner_username}}">{{pctrl.puzzle.puzzle_template.owner}}</a></small></div>
+            <div><small>puzzle by <a href="#/users/{{pctrl.puzzle.owner_username}}">{{pctrl.puzzle.owner}}</a></small></div>
         </div>
         <div class="card-body" style="min-height:530px;">
             <div class="btn btn-danger top-right-x" ng-click="pctrl.deletePuzzle()">x</div>
