--- a/public/template/profile-menu.html
+++ b/public/template/profile-menu.html
@@ -1,4 +1,3 @@
-<li class="btn-wave" data-ui-sref-active="active"><a data-ui-sref="users.profile.about">About</a></li>
-<li class="btn-wave" data-ui-sref-active="active"><a data-ui-sref="users.profile.timeline">Timeline</a></li>
-<li class="btn-wave" data-ui-sref-active="active"><a data-ui-sref="users.profile.photos">Photos</a></li>
-<li class="btn-wave" data-ui-sref-active="active"><a data-ui-sref="users.profile.connections">Connections</a></li>
+<li class="btn-wave" data-ui-sref-active="active"><a data-ui-sref="users.profile.puzzles-made">Puzzles I've Made</a></li>
+<li class="btn-wave" data-ui-sref-active="active"><a data-ui-sref="users.profile.templates-made">Templates I've Made</a></li>
+<li class="btn-wave" data-ui-sref-active="active"><a data-ui-sref="users.profile.puzzles-worked">Puzzles I've Worked On</a></li>
