--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -8,9 +8,7 @@
         <div class="pm-overview c-overflow">
             <div class="pmo-pic">
                 <div class="p-relative">
-                    <a href="">
-                        <img class="img-responsive" src="{{pctrl.profile.profile_image_base_url}}_400x400.jpeg" alt="">
-                    </a>
+                    <img class="img-responsive" src="{{pctrl.profile.profile_image_base_url}}_400x400.jpeg" alt="">
                 </div>
 
                 <div class="pmo-stat">
@@ -21,7 +19,7 @@
 
             <div class="pmo-block pmo-contact hidden-xs">
                 <ul>
-                    <li><a href="https://twitter.com/{{ pctrl.profile.twitter_handle }}" target="_new"><i class="zmdi zmdi-twitter"></i> {{ pctrl.profile.twitter_handle }} (twitter.com/{{ pctrl.profile.twitter_handle }})</a></li>
+                    <li><a href="https://twitter.com/{{ pctrl.profile.twitter_handle }}" target="_new"><i class="zmdi zmdi-twitter"></i> twitter.com/{{ pctrl.profile.twitter_handle }}</a></li>
                 </ul>
             </div>
         </div>
