--- a/public/template/sidebar-left.html
+++ b/public/template/sidebar-left.html
@@ -21,7 +21,7 @@
 
     <ul class="main-menu">
         <li data-ui-sref-active="active" ng-hide="profile.logged_in">
-            <a data-ui-sref="login" href="#" onclick="window.open('/auth/twitter','auth','width=500,height=450');return false;"><i class="zmdi zmdi-sign-in"></i> Login</a>
+            <a href="#" onclick="window.open('/auth/twitter','auth','width=500,height=450');return false;"><i class="zmdi zmdi-sign-in"></i> Login</a>
         </li>
         <li data-ui-sref-active="active">
             <a data-ui-sref="home" data-ng-click="mactrl.sidebarStat($event)"><i class="zmdi zmdi-home"></i> Home</a>
