--- a/public/views/puzzle-template-edit.html
+++ b/public/views/puzzle-template-edit.html
@@ -50,10 +50,10 @@
         <div class="card-body">
             <div class="puzzle">
                 <table>
-                    <tr ng-repeat="row in ptctrl.range(1,ptctrl.width)" >
+                    <tr ng-repeat="row in ptctrl.range(1,ptctrl.height)" >
                         <td class="pointy" 
                             ng-class="{'black' : ptctrl.isBlackSquare(row, col), 'clue' : ptctrl.clueNumber(row, col) > -1}" 
-                            ng-repeat="col in ptctrl.range(1, ptctrl.height)" 
+                            ng-repeat="col in ptctrl.range(1, ptctrl.width)" 
                             data-row="{{row}}" 
                             data-col="{{col}}" 
                             ng-click="ptctrl.changeBlock(row, col)"
