Fill out Profile tabs

--- a/public/views/profile-puzzles-made.html
+++ b/public/views/profile-puzzles-made.html
@@ -4,13 +4,14 @@
         <div class="col-md-3 col-sm-6 col-xs-6" ng-repeat="p in pctrl.profile.puzzles">
             <div class="c-item">
                 <div class="abbr-puzzle-container">
-                    <div class="abbr-puzzle">
+                    <div class="abbr-puzzle" style="{{pctrl.customStyle(pctrl.profile.templates[p.template_slug])}}">
                         <div class="abbr-puzzle-row" ng-repeat="row in pctrl.range(1,pctrl.profile.templates[p.template_slug].height)">
                             <div 
                                 ng-repeat="col in pctrl.range(1,pctrl.profile.templates[p.template_slug].width)"
                                 class="abbr-puzzle-square" 
                                 ng-class="{'black': pctrl.isBlackSquare(p.template_slug, row, col)
-                                         , 'clue' : pctrl.clueNumber(p.template_slug, row, col) > -1}"
+                                         , 'clue' : pctrl.clueNumber(p.template_slug, row, col) > -1
+                                         , 'small' : pctrl.profile.templates[p.template_slug].width > 10}"
                                 data-clue-number="{{pctrl.clueNumber(p.template_slug, row, col) + 1}}"
                                 style="
                                     left:{{(col-1)*100/pctrl.profile.templates[p.template_slug].width}}%;
